--- a/20200630/package.json
+++ b/20200630/package.json
@@ -6,7 +6,8 @@
     "start-local-deck": "webpack-dev-server --env.local --env.esnext --env.deck --progress --hot --open",
     "start-local-luma": "webpack-dev-server --env.local --env.esnext --env.luma --progress --hot --open",
     "start-local-math": "webpack-dev-server --env.local --env.esnext --env.math --progress --hot --open",
-    "generate": "node ./generate-index/index.js"
+    "generate": "node ./generate-index/index.js",
+    "build": "webpack -p"
   },
   "dependencies": {
     "@deck.gl/core": "^8.1.4",
